style.css
@import url('https://fonts.googleapis.com/css?family=Varela+Round');

* {
	margin: 0;
	border: 0;
	padding: 0;
}

body {
  font-family: "Varela Round", sans-serif;
  color: #404040;
}

header {
  background-color: #083D77;
  height: auto;
  width: 100%;
  position: fixed;
  opacity: 0.9;
}

#header-inner {
  max-width: 1200px;
  margin: 0 auto;
}

#logo {
  float: left;
  width: 200px;
  height: 60px;
  margin: 20px;
  color: #FFF1D0;
  text-decoration: none;
  padding-top: 25px;
}

nav {
  float: right;
  padding: 35px 20px 0 0;
}

ul {
  list-style: none;
}

nav ul li {
  font-family: sans-serif;
  display: inline-block;
  padding: 10px;
  float: left;
  font-size: 110%;
}

nav ul li a {
  color: #EBEBD3;
  text-decoration: none;
  font-weight: 700;
}

.pages {
  width: 100vw;
  height: 100vh;
}

#intro {
  /*background-color: #F4D35E;*/
  background-color: #F0F0F0;
  text-align: center;
}

#intro h1 {
  padding-top: 50vh;
  font-size: 400%;
}

#about {
  background-color: #F95738;
  text-align: center;
}

#about h2 {
  padding-top: 40vh;
  font-size: 300%;
}

#about h3 {
  margin-top: 2%;
  font-size: 300%;
}

#skills {
  /*background-color: #EE964B;*/
  background-color: #F0F0F0;
  text-align: center;
}

#skills h3 {
  padding-top: 25vh;
  padding-bottom: 3vh;
  font-size: 300%;
}

#skills ul li {
  display: inline-block;
  padding: 2% 6%;
}

#skills ul li i {
  font-size: 600%;
}

#works {
  background-color: #8FC0A9;
  text-align: center;
}

#works h3 {
  font-size: 300%;
  padding-top: 25vh;
}

.projects {
  margin: 3% 10% 0 10%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 2em;
  grid-auto-rows: minmax(220px, auto);
}

.projects > .project {
  border: 3px solid brown;
  background-color: #EBEBD3;
  border-radius: 10px;
  height: auto;
  width: 100%;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  /*overflow: hidden;*/
}

.project:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

img {
  border-bottom: 3px solid brown;
	border-radius: 7px 7px 0 0;
  max-width: 100%;
  max-height: auto;
}

.title-box {
  padding: 2px 16px;
}

/*.content {
  padding: 2%;
}*/

/*p {
  height: 100%;
}*/

.title {
  font-size: 150%;
  padding-top: 3%;
  vertical-align: middle;
}

/*.link {
  padding-bottom: 0;
}*/

#contact-me {
  /*background-color: #FE4A49;*/
  background-color: #F0F0F0;
}

.container {
  max-width: 400px;
  width: 100%;
  margin: 0 auto;
  position: relative;
}

#contact input[type="text"],
#contact input[type="email"],
#contact input[type="tel"],
#contact input[type="url"],
#contact textarea,
#contact button[type="submit"] {
  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
}

#contact {
  /*background: #F9F9F9;*/
  padding: 25px;
  margin: 150px 0;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
}

#contact h3 {
  display: block;
  font-size: 30px;
  font-weight: 300;
  margin-bottom: 10px;
}

#contact h4 {
  margin: 5px 0 15px;
  display: block;
  font-size: 13px;
  font-weight: 400;
}

fieldset {
  border: medium none !important;
  margin: 0 0 10px;
  min-width: 100%;
  padding: 0;
  width: 100%;
}

#contact input[type="text"],
#contact input[type="email"],
#contact input[type="tel"],
#contact input[type="url"],
#contact textarea {
  width: 100%;
  border: 1px solid #ccc;
  background: #FFF;
  margin: 0 0 5px;
  padding: 10px;
}

#contact input[type="text"]:hover,
#contact input[type="email"]:hover,
#contact input[type="tel"]:hover,
#contact input[type="url"]:hover,
#contact textarea:hover {
  -webkit-transition: border-color 0.3s ease-in-out;
  -moz-transition: border-color 0.3s ease-in-out;
  transition: border-color 0.3s ease-in-out;
  border: 1px solid #aaa;
}

#contact textarea {
  height: 100px;
  max-width: 100%;
  resize: none;
}

#contact button[type="submit"] {
  cursor: pointer;
  width: 100%;
  border: none;
  background: #4CAF50;
  color: #FFF;
  margin: 0 0 5px;
  padding: 10px;
  font-size: 15px;
}

#contact button[type="submit"]:hover {
  background: #43A047;
  -webkit-transition: background 0.3s ease-in-out;
  -moz-transition: background 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
}

#contact button[type="submit"]:active {
  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
}

.copyright {
  text-align: center;
}

#contact input:focus,
#contact textarea:focus {
  outline: 0;
  border: 1px solid #aaa;
}

::-webkit-input-placeholder {
  color: #888;
}

:-moz-placeholder {
  color: #888;
}

::-moz-placeholder {
  color: #888;
}

:-ms-input-placeholder {
  color: #888;
}

@media screen and (max-width: 768px) {
  #intro h1 {
    font-size: 200%;
  }

  #about h2 {
    font-size: 240%;
  }

  #about h3 {
    font-size: 180%;
  }

  #skills ul li i {
    font-size: 400%;
  }

  #works {
    padding-top: 20vh;
  }

  #works h3 {
    font-size: 150%;
    padding: 5vh 0;
  }

  .projects {
    margin: 0 10%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 2em;
    grid-auto-rows: minmax(150px, auto);
  }

  .project {
    /*display: block;*/
    height: auto;
  }

  /*.projects {
    margin: 3% 10% 0 10%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 1em;
    grid-auto-rows: minmax(100px, auto);
  }

  .projects > .project {
    border: 1px solid brown;
    border-radius: 5px;
    min-height: 100%;
  }*/


  .title {
    font-size: 100%;
  }

  .content > p {
    font-size: 90%;
  }

}

@media screen and (max-width: 480px) {

  .projects {
    /*display: block;*/
		grid-template-columns: 1fr;
  }

  .project {
    margin: 2%;
		/*width: auto;*/
  }

	img {
		max-height: auto;
		max-width: 70%;
		margin: 0 auto;
	}

	#works h3 {
    font-size: 150%;
    padding: 5vh 0;
  }

}

